--- a/reports/AutomationReport.html
+++ b/reports/AutomationReport.html
@@ -44,7 +44,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Feb 19, 2024 05:05:53 PM</span>
+			<span class='label blue darken-3 suite-start-time'>Feb 19, 2024 06:25:47 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -59,7 +59,7 @@
 				<i class='material-icons'>warning</i> Status
 				</a>
 				<ul id='tests-toggle' class='dropdown-content'>
-										<li status='fail'><a href='#!'>Fail <i class='material-icons red-text'>cancel</i></a></li>
+										<li status='pass'><a href='#!'>Pass <i class='material-icons green-text'>check_circle</i></a></li>
 					<li class='divider'></li>
 					<li status='clear' clear='true'><a href='#!'>Clear Filters <i class='material-icons'>clear</i></a></li>
 				</ul>
@@ -102,10 +102,10 @@
                     <canvas id='parent-analysis' width='90' height='70'></canvas>
                 </div>
                 <div class='block text-small'>
-                    <span class='tooltipped' data-position='top' data-tooltip='0%'><span class='strong'>0</span> test(s) passed</span>
+                    <span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>1</span> test(s) passed</span>
                 </div>
                 <div class='block text-small'>
-                    <span class='strong tooltipped' data-position='top' data-tooltip='100%'>1</span> test(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> others
+                    <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> test(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> others
                 </div>
             </div>
         </div>
@@ -123,17 +123,17 @@
 </div>	<div class='subview-left left'>
 		<div class='view-summary'>
 			<ul id='test-collection' class='test-collection'>
-				<li class='test displayed active  fail' status='fail' bdd='false' test-id='1'>
+				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>verifyFindJobsView_FailingTest</span>
-						<span class='test-time'>Feb 19, 2024 05:05:53 PM</span>
-						<span class='test-status right fail'>fail</span>
+						<span class='test-name'>verifySearchJob</span>
+						<span class='test-time'>Feb 19, 2024 06:25:47 PM</span>
+						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Feb 19, 2024 05:05:53 PM</span>
-	<span class='label end-time'>Feb 19, 2024 05:06:12 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 18s+619ms</span>
+	<span class='label start-time'>Feb 19, 2024 06:25:47 PM</span>
+	<span class='label end-time'>Feb 19, 2024 06:26:22 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 35s+7ms</span>
 </div>
 <div class='test-steps'>
 	<table class='bordered table-results'>
@@ -147,17 +147,17 @@
 		<tbody>
 			<tr class='log' status='info'>
 				<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-				<td class='timestamp'>5:05:58 PM</td>
+				<td class='timestamp'>6:25:55 PM</td>
 				<td class='step-details'>
 						Clicking on Careers Link
 					
 				</td>
 			</tr>
-			<tr class='log' status='fail'>
-				<td class='status fail' title='fail' alt='fail'><i class='material-icons'>cancel</i></td>
-				<td class='timestamp'>5:06:12 PM</td>
+			<tr class='log' status='pass'>
+				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+				<td class='timestamp'>6:26:22 PM</td>
 				<td class='step-details'>
-						<span class='badge white-text red'>Test Case: verifyFindJobsView_FailingTest Failed</span>
+						<span class='badge white-text green'>Test Case: verifySearchJob Passed</span>
 					
 				</td>
 			</tr>
@@ -206,19 +206,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Feb 19, 2024 05:05:53 PM</div>
+					<div class='panel-lead'>Feb 19, 2024 06:25:47 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Feb 19, 2024 05:06:12 PM</div>
+			 		<div class='panel-lead'>Feb 19, 2024 06:26:22 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 18s+779ms</div>
+					<div class='panel-lead'>0h 0m 35s+75ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
@@ -246,13 +246,13 @@
 		<script>
 			var statusGroup = {
                 parentCount: 1,
-				passParent: 0,
-				failParent: 1,
+				passParent: 1,
+				failParent: 0,
 				fatalParent: 0,
 				errorParent: 0,
 				warningParent: 0,
 				skipParent: 0,
-				exceptionsParent: 1,
+				exceptionsParent: 0,
 				childCount: 0,
 				passChild: 0,
 				failChild: 0,
@@ -277,7 +277,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "verifyFindJobsView_FailingTest":18.619
+			        "verifySearchJob":35.007
 			};
 		</script>
 		<script src='https://cdn.rawgit.com/extent-framework/extent-github-cdn/b65cd69/v3html/js/extent.js' type='text/javascript'></script>
